--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NzQ3MDI3MDk4NjAxOTE0Mzc4.X0I5Mw.rGMIq1dh2fhUMS-6TU8FNSP4e-Q","client":"747027098601914378","tag":"!","case":"false","separator":"\\s+","modules":{"discord.js":["",true],"fstorm":["",true],"jimp":["",true]},"ownerId":"687968050280267805"}
+{"token":"elo","client":"elp","tag":"!","case":"false","separator":"\\s+","modules":{"discord.js":["",true],"fstorm":["",true],"jimp":["",true]},"ownerId":"687968050280267805"}
